feat: lex文件新增错误提示

--- a/js基础/interator/index.html
+++ b/js基础/interator/index.html
@@ -9,7 +9,7 @@
 <body>
   <script>
     /*
-      * 一个可迭代对用由可迭代协议[Symbol.iterator] 和 迭代器协议组成
+      * 一个可迭代对象由可迭代协议[Symbol.iterator] 和 迭代器协议组成
       * 可迭代协议：接收一个无参函数，返回值为一个符合迭代器协议的对象
       * 迭代器协议：必须实现next()方法，其返回值类型是一个对象，该对象必须支持一下特性：
       * { done：bollean, value: any } 
